# oaty-bar

./: .gitattributes  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst
src/oaty_bar/: _dispatch.py  _export_hdf.py  hdf.py
tests/: test_export_hdf.py  test_hdf.py  tiled_trees.py
