[project]
name = "oaty-bar"
version = "0.1.0"
authors = [
  { name="Mark Wolfman", email="" },
]
description = "Tools for APS data management"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]
keywords = []
dependencies = []

[dependency-groups]
dev = ["black", "pytest", "ruff", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/spc-group/oaty-bar"

[project.scripts]
# command = "oaty_bar.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]
